# bluecli

./: Cargo.toml  Readme.md
src/: authentication.rs  main.rs  subscriptions.rs
src/authentication/: azure.rs  cache.rs  idendity.rs  mod.rs
