[package]
name = "bluecli"
version = "0.1.0"
edition = "2024"

[dependencies]
azure_identity = "0.23.0"
azure_security_keyvault_secrets = "0.2.0"
clap = { version = "4.5.37", features = ["derive"] }
typespec = "0.3.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
azure_core = "0.23.0"
url = "2.5.4"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
oauth2 = "5.0.0"
anyhow = "1.0.98"
futures = "0.3.31"
tracing = "0.1.41"
async-lock = "3.4.0"
libhimmelblau = "0.6.17"
msal = "0.5.5"
